# poseidon2-circuit

./: Cargo.toml  README.md
poseidon2/: Cargo.toml
poseidon2/src/: lib.rs
poseidon2/src/base/: hash.rs  mod.rs  p128pow5t3.rs  p128pow5t3_compact.rs  primitives.rs
poseidon2/src/base/bn256/: fp.rs  mod.rs
poseidon2/src/circuit/: hash.rs  mod.rs  params.rs  params_bn254.rs  poseidon.rs  pow5.rs
